--- a/index.html
+++ b/index.html
@@ -16,28 +16,37 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div class="container">
-      <img src="images/image-qr-code.png" alt="qr-code" width="250" />
-      <div class="text">Improve your front-end skills by building projects</div>
-      <p>
-        Scan the QR code to visit Frontend Mentor and take your coding skills to
-        the next level
-      </p>
-    </div>
-    <div class="attribution">
-      Challenge by
-      <a
-        rel="noopener noreferrer"
-        href="https://www.frontendmentor.io?ref=challenge"
-        target="_blank"
-        >Frontend Mentor</a
-      >. Coded by
-      <a
-        rel="noopener noreferrer"
-        href="https://github.com/CollinsPro56"
-        target="_blank"
-        >Collins Progress C.</a
-      >.
-    </div>
+    <header>
+      <h1>Frontend Mentor | QR code component</h1>
+    </header>
+    <main>
+      <div class="container">
+        <img src="images/image-qr-code.png" alt="qr-code" width="250" />
+        <div class="text">
+          Improve your front-end skills by building projects
+        </div>
+        <p>
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
+      </div>
+    </main>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a
+          rel="noopener noreferrer"
+          href="https://www.frontendmentor.io?ref=challenge"
+          target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a
+          rel="noopener noreferrer"
+          href="https://github.com/CollinsPro56"
+          target="_blank"
+          >Collins Progress C.</a
+        >.
+      </div>
+    </footer>
   </body>
 </html>
